--- a/dune/fem/fluxes/Makefile.in
+++ b/dune/fem/fluxes/Makefile.in
@@ -165,8 +165,6 @@ ALBERTA_INCLUDE_CPPFLAGS = @ALBERTA_INCLUDE_CPPFLAGS@
 ALBERTA_LDFLAGS = @ALBERTA_LDFLAGS@
 ALBERTA_LIBPATHFLAGS = @ALBERTA_LIBPATHFLAGS@
 ALBERTA_LIBS = @ALBERTA_LIBS@
-ALGLIB_CPPFLAGS = @ALGLIB_CPPFLAGS@
-ALGLIB_LIBS = @ALGLIB_LIBS@
 ALL_PKG_CPPFLAGS = @ALL_PKG_CPPFLAGS@
 ALL_PKG_LDFLAGS = @ALL_PKG_LDFLAGS@
 ALL_PKG_LIBS = @ALL_PKG_LIBS@
@@ -202,6 +200,7 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLLTOOL = @DLLTOOL@
 DOT = @DOT@
 DOXYGEN = @DOXYGEN@
 DSYMUTIL = @DSYMUTIL@
@@ -333,6 +332,7 @@ LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 METIS = @METIS@
 METIS_INCLUDE = @METIS_INCLUDE@
 METIS_LDFLAGS = @METIS_LDFLAGS@
@@ -406,6 +406,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
