--- a/src/problems/1dphase/Makefile.in
+++ b/src/problems/1dphase/Makefile.in
@@ -222,8 +222,6 @@ ALBERTA_INCLUDE_CPPFLAGS = @ALBERTA_INCLUDE_CPPFLAGS@
 ALBERTA_LDFLAGS = @ALBERTA_LDFLAGS@
 ALBERTA_LIBPATHFLAGS = @ALBERTA_LIBPATHFLAGS@
 ALBERTA_LIBS = @ALBERTA_LIBS@
-ALGLIB_CPPFLAGS = @ALGLIB_CPPFLAGS@
-ALGLIB_LIBS = @ALGLIB_LIBS@
 ALL_PKG_CPPFLAGS = @ALL_PKG_CPPFLAGS@
 ALL_PKG_LDFLAGS = @ALL_PKG_LDFLAGS@
 ALL_PKG_LIBS = @ALL_PKG_LIBS@
@@ -271,6 +269,7 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLLTOOL = @DLLTOOL@
 DOT = @DOT@
 DOXYGEN = @DOXYGEN@
 DSYMUTIL = @DSYMUTIL@
@@ -384,7 +383,7 @@ GRAPE_LDFLAGS = @GRAPE_LDFLAGS@
 GRAPE_LIBS = @GRAPE_LIBS@
 GREP = @GREP@
 #GRIDTYPE = YASPGRID
-GRIDDIM = 2 
+GRIDDIM = 1 
 GRIDDIM_CPPFLAGS = @GRIDDIM_CPPFLAGS@
 
 #GRIDTYPE = ALUGRID_CONFORM
@@ -405,6 +404,7 @@ LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 METIS = @METIS@
 METIS_INCLUDE = @METIS_INCLUDE@
 METIS_LDFLAGS = @METIS_LDFLAGS@
@@ -478,6 +478,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
@@ -546,7 +547,7 @@ POLORDER = 1
 PROBLEM = 1 # check ./problemtype.hh
 FLUX = 1 # check ./problemcreator.hh
 phasefield_SOURCES = $(SOURCES) 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMYALGO
 phasefield_nc_SOURCES = $(SOURCES) 
 phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DNONCON
 phasefield_wb_SOURCES = $(SOURCES) 
