--- a/src/problems/2dphase/Makefile.am
+++ b/src/problems/2dphase/Makefile.am
@@ -38,7 +38,8 @@ phasefield_SOURCES = $(SOURCES)
 
  
 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)-DWELLBALANCED -DMYALGO
+
 
 DISTCHECK_CONFIGURE_FLAGS = DOXYGEN="true"
 
