--- a/dune/phasefield/Makefile.am
+++ b/dune/phasefield/Makefile.am
@@ -1,4 +1,6 @@
+SUBDIRS = util modeling
+include $(top_srcdir)/am/global-rules
+
 phasefieldincludedir = $(includedir)/dune/phasefield
 phasefieldinclude_HEADERS = phasefield.hh algorithmtraits.hh phasefieldalgorithm.hh
 
-include $(top_srcdir)/am/global-rules
