--- a/dune/fem/base/Makefile.in
+++ b/dune/fem/base/Makefile.in
@@ -308,6 +308,14 @@ DUNE_PHASEFIELD_VERSION = @DUNE_PHASEFIELD_VERSION@
 DUNE_PHASEFIELD_VERSION_MAJOR = @DUNE_PHASEFIELD_VERSION_MAJOR@
 DUNE_PHASEFIELD_VERSION_MINOR = @DUNE_PHASEFIELD_VERSION_MINOR@
 DUNE_PHASEFIELD_VERSION_REVISION = @DUNE_PHASEFIELD_VERSION_REVISION@
+DUNE_SPGRID_CPPFLAGS = @DUNE_SPGRID_CPPFLAGS@
+DUNE_SPGRID_LDFLAGS = @DUNE_SPGRID_LDFLAGS@
+DUNE_SPGRID_LIBS = @DUNE_SPGRID_LIBS@
+DUNE_SPGRID_ROOT = @DUNE_SPGRID_ROOT@
+DUNE_SPGRID_VERSION = @DUNE_SPGRID_VERSION@
+DUNE_SPGRID_VERSION_MAJOR = @DUNE_SPGRID_VERSION_MAJOR@
+DUNE_SPGRID_VERSION_MINOR = @DUNE_SPGRID_VERSION_MINOR@
+DUNE_SPGRID_VERSION_REVISION = @DUNE_SPGRID_VERSION_REVISION@
 DVIPDF = @DVIPDF@
 DVIPS = @DVIPS@
 ECHO_C = @ECHO_C@
@@ -475,6 +483,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+resolved_top_srcdir = @resolved_top_srcdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
