--- a/src/problems/1dphase/Makefile.in
+++ b/src/problems/1dphase/Makefile.in
@@ -392,11 +392,11 @@ GRAPE_CPPFLAGS = @GRAPE_CPPFLAGS@
 GRAPE_LDFLAGS = @GRAPE_LDFLAGS@
 GRAPE_LIBS = @GRAPE_LIBS@
 GREP = @GREP@
-#GRIDTYPE = YASPGRID
-GRIDDIM = 1 
+#GRIDTYPE = ALBERTAGRID
+GRIDDIM = 2 
 GRIDDIM_CPPFLAGS = @GRIDDIM_CPPFLAGS@
 
-#GRIDTYPE = ALUGRID_CONFORM
+#GRIDTYPE = ONEDGRID
 GRIDTYPE = SPGRID
 INKSCAPE = @INKSCAPE@
 INSTALL = @INSTALL@
