--- a/src/problems/1dphase/Makefile
+++ b/src/problems/1dphase/Makefile
@@ -204,8 +204,8 @@ HEADERS = $(phase_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /usr/people/kraenkel/NewDune/dune-phasefield/missing --run aclocal-1.11
-ACLOCAL_AMFLAGS = -I . -I m4 -I /usr/people/kraenkel/NewDune/dune-common/m4 -I /usr/people/kraenkel/NewDune/dune-geometry/m4 -I /usr/people/kraenkel/NewDune/dune-grid/m4 -I /usr/people/kraenkel/NewDune/dune-istl/m4 -I /usr/people/kraenkel/NewDune/dune-localfunctions/m4 -I /usr/people/kraenkel/NewDune/dune-fem/m4 -I /usr/people/kraenkel/NewDune/dune-fem-dg/m4 -I /usr/people/kraenkel/NewDune/dune-spgrid/m4
+ACLOCAL = ${SHELL} /disk1/DuneTrunk/dune-phasefield/missing --run aclocal-1.11
+ACLOCAL_AMFLAGS = -I . -I m4 -I /disk1/DuneTrunk/dune-common/m4 -I /disk1/DuneTrunk/dune-geometry/m4 -I /disk1/DuneTrunk/dune-grid/m4 -I /disk1/DuneTrunk/dune-istl/m4 -I /disk1/DuneTrunk/dune-localfunctions/m4 -I /disk1/DuneTrunk/dune-fem/m4 -I /disk1/DuneTrunk/dune-fem-dg/m4 -I /disk1/DuneTrunk/dune-spgrid/m4
 ALBERTA1D_CPPFLAGS = $(ALBERTA_INCLUDE_CPPFLAGS) -DALBERTA_DIM=1 -DENABLE_ALBERTA
 ALBERTA1D_LDFLAGS = 
 ALBERTA1D_LIBS = $(DUNE_GRID_LIBDIR)/libdunealbertagrid_1d.la $(DUNE_GRID_LIBDIR)/libdunegrid.la $(ALBERTA_LIBPATHFLAGS) -lalberta_1d $(ALBERTA_BASE_LIBS)
@@ -242,9 +242,9 @@ ALBERTA_INCLUDE_CPPFLAGS = -I/hosts/raid5/aragorn/dune/modules/x86_64/alberta/in
 ALBERTA_LDFLAGS = $(ALBERTA$(ALBERTA_DIM)D_LDFLAGS)
 ALBERTA_LIBPATHFLAGS = 
 ALBERTA_LIBS = $(ALBERTA$(ALBERTA_DIM)D_LIBS)
-ALL_PKG_CPPFLAGS =   -I/usr/people/kraenkel/NewDune/dune-common  -I/usr/people/kraenkel/NewDune/dune-geometry  -I/usr/people/kraenkel/NewDune/dune-grid  -I/usr/people/kraenkel/NewDune/dune-istl  -I/usr/people/kraenkel/NewDune/dune-localfunctions  -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/SuiteSparse_config -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/NewDune/dune-fem  -I/usr/people/kraenkel/NewDune/dune-fem-dg  -I/usr/people/kraenkel/NewDune/dune-spgrid   ${DUNEMPICPPFLAGS} ${GMP_CPPFLAGS} -I/usr/people/kraenkel/NewDune/dune-common -I/usr/people/kraenkel/NewDune/dune-geometry -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE) ${ALBERTA_CPPFLAGS} ${UG_CPPFLAGS} ${DUNEMPICPPFLAGS} -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/serial -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/duneinterface -DENABLE_ALUGRID -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/parallel -I/usr/people/kraenkel/NewDune/dune-grid ${SUPERLU_CPPFLAGS} -I/usr/people/kraenkel/NewDune/dune-istl -I/usr/people/kraenkel/NewDune/dune-localfunctions -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/SuiteSparse_config -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/NewDune/dune-fem -I/usr/people/kraenkel/NewDune/dune-fem-dg -I/usr/people/kraenkel/NewDune/dune-spgrid
+ALL_PKG_CPPFLAGS =   -I/disk1/DuneTrunk/dune-common  -I/disk1/DuneTrunk/dune-geometry  -I/disk1/DuneTrunk/dune-grid  -I/disk1/DuneTrunk/dune-istl  -I/disk1/DuneTrunk/dune-localfunctions  -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/SuiteSparse_config -DENABLE_UMFPACK=1 -I/disk1/DuneTrunk/dune-fem  -I/disk1/DuneTrunk/dune-fem-dg  -I/disk1/DuneTrunk/dune-spgrid   ${DUNEMPICPPFLAGS} ${GMP_CPPFLAGS} -I/disk1/DuneTrunk/dune-common -I/disk1/DuneTrunk/dune-geometry -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE) ${ALBERTA_CPPFLAGS} ${UG_CPPFLAGS} ${DUNEMPICPPFLAGS} -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/serial -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/duneinterface -DENABLE_ALUGRID -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/parallel -I/disk1/DuneTrunk/dune-grid ${SUPERLU_CPPFLAGS} -I/disk1/DuneTrunk/dune-istl -I/disk1/DuneTrunk/dune-localfunctions -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/SuiteSparse_config -DENABLE_UMFPACK=1 -I/disk1/DuneTrunk/dune-fem -I/disk1/DuneTrunk/dune-fem-dg -I/disk1/DuneTrunk/dune-spgrid
 ALL_PKG_LDFLAGS =             -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib        ${DUNEMPILDFLAGS}     ${ALBERTA_LDFLAGS} ${UG_LDFLAGS} ${DUNEMPILDFLAGS}     -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib   
-ALL_PKG_LIBS =   /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la   /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la       -lumfpack -lamd      /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la   ${SUPERLU_LIBS} /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la -L/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/lib -lalugrid ${DUNEMPILIBS} ${UG_LIBS} ${ALBERTA_LIBS}  /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la ${GMP_LIBS} ${DUNEMPILIBS}  -lumfpack -lamd -lm 
+ALL_PKG_LIBS =   /disk1/DuneTrunk/dune-fem/lib/libdunefem.la   /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la /disk1/DuneTrunk/dune-common/lib/libdunecommon.la       -lumfpack -lamd      /disk1/DuneTrunk/dune-fem/lib/libdunefem.la   ${SUPERLU_LIBS} /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la -L/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/lib -lalugrid ${DUNEMPILIBS} ${UG_LIBS} ${ALBERTA_LIBS}  /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la /disk1/DuneTrunk/dune-common/lib/libdunecommon.la ${GMP_LIBS} ${DUNEMPILIBS}  -lumfpack -lamd -lm 
 ALUGRID_CPPFLAGS = ${DUNEMPICPPFLAGS} -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/serial -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/duneinterface -DENABLE_ALUGRID -I/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/include/parallel
 ALUGRID_LDFLAGS = ${DUNEMPILDFLAGS}
 ALUGRID_LIBS = -L/usr/people/kraenkel/Work/Mymodules/ALUGrid-1.52/lib -lalugrid ${DUNEMPILIBS}
@@ -268,9 +268,9 @@ AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$
 AM_DEFAULT_VERBOSITY = 1
 AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              
 AR = ar
-AUTOCONF = ${SHELL} /usr/people/kraenkel/NewDune/dune-phasefield/missing --run autoconf
-AUTOHEADER = ${SHELL} /usr/people/kraenkel/NewDune/dune-phasefield/missing --run autoheader
-AUTOMAKE = ${SHELL} /usr/people/kraenkel/NewDune/dune-phasefield/missing --run automake-1.11
+AUTOCONF = ${SHELL} /disk1/DuneTrunk/dune-phasefield/missing --run autoconf
+AUTOHEADER = ${SHELL} /disk1/DuneTrunk/dune-phasefield/missing --run autoheader
+AUTOMAKE = ${SHELL} /disk1/DuneTrunk/dune-phasefield/missing --run automake-1.11
 AWK = gawk
 BIBTEX = bibtex
 BLAS_LIBS = -lblas
@@ -301,45 +301,45 @@ DUNEMPILIBS =
 DUNEWEBDIR = no
 DUNE_COMMON_CPPFLAGS = 
 DUNE_COMMON_LDFLAGS = 
-DUNE_COMMON_LIBDIR = /usr/people/kraenkel/NewDune/dune-common/lib
-DUNE_COMMON_LIBS = /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la
-DUNE_COMMON_ROOT = /usr/people/kraenkel/NewDune/dune-common
+DUNE_COMMON_LIBDIR = /disk1/DuneTrunk/dune-common/lib
+DUNE_COMMON_LIBS = /disk1/DuneTrunk/dune-common/lib/libdunecommon.la
+DUNE_COMMON_ROOT = /disk1/DuneTrunk/dune-common
 DUNE_COMMON_VERSION = 2.3-svn
 DUNE_COMMON_VERSION_MAJOR = 2
 DUNE_COMMON_VERSION_MINOR = 3
 DUNE_COMMON_VERSION_REVISION = 0
-DUNE_CPPFLAGS =  -I/usr/people/kraenkel/NewDune/dune-common -I/usr/people/kraenkel/NewDune/dune-geometry -I/usr/people/kraenkel/NewDune/dune-grid -I/usr/people/kraenkel/NewDune/dune-istl -I/usr/people/kraenkel/NewDune/dune-localfunctions -I/usr/people/kraenkel/NewDune/dune-fem -I/usr/people/kraenkel/NewDune/dune-fem-dg -I/usr/people/kraenkel/NewDune/dune-spgrid
+DUNE_CPPFLAGS =  -I/disk1/DuneTrunk/dune-common -I/disk1/DuneTrunk/dune-geometry -I/disk1/DuneTrunk/dune-grid -I/disk1/DuneTrunk/dune-istl -I/disk1/DuneTrunk/dune-localfunctions -I/disk1/DuneTrunk/dune-fem -I/disk1/DuneTrunk/dune-fem-dg -I/disk1/DuneTrunk/dune-spgrid
 DUNE_FEM_CPPFLAGS = 
 DUNE_FEM_DG_CPPFLAGS = 
 DUNE_FEM_DG_LDFLAGS = 
 DUNE_FEM_DG_LIBS = 
-DUNE_FEM_DG_ROOT = /usr/people/kraenkel/NewDune/dune-fem-dg
+DUNE_FEM_DG_ROOT = /disk1/DuneTrunk/dune-fem-dg
 DUNE_FEM_DG_VERSION = 0.1
 DUNE_FEM_DG_VERSION_MAJOR = 0
 DUNE_FEM_DG_VERSION_MINOR = 1
 DUNE_FEM_DG_VERSION_REVISION = 0
 DUNE_FEM_LDFLAGS = 
-DUNE_FEM_LIBDIR = /usr/people/kraenkel/NewDune/dune-fem/lib
-DUNE_FEM_LIBS = /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la
-DUNE_FEM_ROOT = /usr/people/kraenkel/NewDune/dune-fem
+DUNE_FEM_LIBDIR = /disk1/DuneTrunk/dune-fem/lib
+DUNE_FEM_LIBS = /disk1/DuneTrunk/dune-fem/lib/libdunefem.la
+DUNE_FEM_ROOT = /disk1/DuneTrunk/dune-fem
 DUNE_FEM_VERSION = 1.4.0
 DUNE_FEM_VERSION_MAJOR = 1
 DUNE_FEM_VERSION_MINOR = 4
 DUNE_FEM_VERSION_REVISION = 0
 DUNE_GEOMETRY_CPPFLAGS = 
 DUNE_GEOMETRY_LDFLAGS = 
-DUNE_GEOMETRY_LIBDIR = /usr/people/kraenkel/NewDune/dune-geometry/lib
-DUNE_GEOMETRY_LIBS = /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la
-DUNE_GEOMETRY_ROOT = /usr/people/kraenkel/NewDune/dune-geometry
+DUNE_GEOMETRY_LIBDIR = /disk1/DuneTrunk/dune-geometry/lib
+DUNE_GEOMETRY_LIBS = /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la
+DUNE_GEOMETRY_ROOT = /disk1/DuneTrunk/dune-geometry
 DUNE_GEOMETRY_VERSION = 2.3-svn
 DUNE_GEOMETRY_VERSION_MAJOR = 2
 DUNE_GEOMETRY_VERSION_MINOR = 3
 DUNE_GEOMETRY_VERSION_REVISION = 0
 DUNE_GRID_CPPFLAGS = 
 DUNE_GRID_LDFLAGS = 
-DUNE_GRID_LIBDIR = /usr/people/kraenkel/NewDune/dune-grid/lib
-DUNE_GRID_LIBS = /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la
-DUNE_GRID_ROOT = /usr/people/kraenkel/NewDune/dune-grid
+DUNE_GRID_LIBDIR = /disk1/DuneTrunk/dune-grid/lib
+DUNE_GRID_LIBS = /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la
+DUNE_GRID_ROOT = /disk1/DuneTrunk/dune-grid
 DUNE_GRID_VERSION = 2.3-svn
 DUNE_GRID_VERSION_MAJOR = 2
 DUNE_GRID_VERSION_MINOR = 3
@@ -347,17 +347,17 @@ DUNE_GRID_VERSION_REVISION = 0
 DUNE_ISTL_CPPFLAGS = 
 DUNE_ISTL_LDFLAGS = 
 DUNE_ISTL_LIBS = 
-DUNE_ISTL_ROOT = /usr/people/kraenkel/NewDune/dune-istl
+DUNE_ISTL_ROOT = /disk1/DuneTrunk/dune-istl
 DUNE_ISTL_VERSION = 2.3-svn
 DUNE_ISTL_VERSION_MAJOR = 2
 DUNE_ISTL_VERSION_MINOR = 3
 DUNE_ISTL_VERSION_REVISION = 0
 DUNE_LDFLAGS =                 
-DUNE_LIBS =     /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la     /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la 
+DUNE_LIBS =     /disk1/DuneTrunk/dune-fem/lib/libdunefem.la /disk1/DuneTrunk/dune-fem/lib/libdunefem.la     /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la /disk1/DuneTrunk/dune-common/lib/libdunecommon.la /disk1/DuneTrunk/dune-common/lib/libdunecommon.la 
 DUNE_LOCALFUNCTIONS_CPPFLAGS = 
 DUNE_LOCALFUNCTIONS_LDFLAGS = 
 DUNE_LOCALFUNCTIONS_LIBS = 
-DUNE_LOCALFUNCTIONS_ROOT = /usr/people/kraenkel/NewDune/dune-localfunctions
+DUNE_LOCALFUNCTIONS_ROOT = /disk1/DuneTrunk/dune-localfunctions
 DUNE_LOCALFUNCTIONS_VERSION = 2.3-svn
 DUNE_LOCALFUNCTIONS_VERSION_MAJOR = 2
 DUNE_LOCALFUNCTIONS_VERSION_MINOR = 3
@@ -372,7 +372,7 @@ DUNE_PHASEFIELD_VERSION_REVISION = 0
 DUNE_SPGRID_CPPFLAGS = 
 DUNE_SPGRID_LDFLAGS = 
 DUNE_SPGRID_LIBS = 
-DUNE_SPGRID_ROOT = /usr/people/kraenkel/NewDune/dune-spgrid
+DUNE_SPGRID_ROOT = /disk1/DuneTrunk/dune-spgrid
 DUNE_SPGRID_VERSION = 2012.13
 DUNE_SPGRID_VERSION_MAJOR = 2012
 DUNE_SPGRID_VERSION_MINOR = 13
@@ -403,7 +403,7 @@ GRAPE_LDFLAGS =
 GRAPE_LIBS = 
 GREP = /bin/grep
 #GRIDTYPE = ALBERTAGRID
-GRIDDIM = 1 
+GRIDDIM = 2 
 GRIDDIM_CPPFLAGS = -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE)
 
 #GRIDTYPE = ONEDGRID
@@ -418,12 +418,12 @@ LAPACK_LIBS = -llapack
 LD = /usr/x86_64-pc-linux-gnu/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBOBJS = 
-LIBS =     /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la /usr/people/kraenkel/NewDune/dune-fem/lib/libdunefem.la     /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/NewDune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/NewDune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la /usr/people/kraenkel/NewDune/dune-common/lib/libdunecommon.la 
+LIBS =     /disk1/DuneTrunk/dune-fem/lib/libdunefem.la /disk1/DuneTrunk/dune-fem/lib/libdunefem.la     /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la /disk1/DuneTrunk/dune-grid/lib/libdunegrid.la /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la /disk1/DuneTrunk/dune-geometry/lib/libdunegeometry.la /disk1/DuneTrunk/dune-common/lib/libdunecommon.la /disk1/DuneTrunk/dune-common/lib/libdunecommon.la 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /usr/people/kraenkel/NewDune/dune-phasefield/missing --run makeinfo
+MAKEINFO = ${SHELL} /disk1/DuneTrunk/dune-phasefield/missing --run makeinfo
 MANIFEST_TOOL = :
 METIS = 
 METIS_INCLUDE = 
@@ -457,9 +457,9 @@ PARMETIS_LIBS =
 PATH_SEPARATOR = :
 PERL = perl
 PETSC = 
-PETSC_CPPFLAGS = 
-PETSC_LDFLAGS = 
-PETSC_LIBS = 
+PETSC_CPPFLAGS =  -DENABLE_PETSC=1
+PETSC_LDFLAGS = -L/disk1/Work/Mymodules/petsc-3.3-p4/lib  -Wl,--rpath -Wl,/disk1/Work/Mymodules/petsc-3.3-p4/lib
+PETSC_LIBS = -lpetsc -llapack -lblas -lX11 
 PKG_CONFIG = /usr/bin/pkg-config
 PKG_CONFIG_LIBDIR = 
 PKG_CONFIG_PATH = 
@@ -484,9 +484,9 @@ SUPERLU_DIST_LDFLAGS = -L/usr/local/
 SUPERLU_DIST_LIBS = 
 SUPERLU_LIBS = 
 TEX = latex
-UG_CPPFLAGS = 
+UG_CPPFLAGS = -I/hosts/raid5/aragorn/dune/modules/x86_64/UG_8441/include   -DENABLE_UG
 UG_LDFLAGS = 
-UG_LIBS = 
+UG_LIBS = -L/hosts/raid5/aragorn/dune/modules/x86_64/UG_8441/lib   -lugS2 -lugS3 -ldevS
 UMFPACK_CPPFLAGS = -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/SuiteSparse_config -DENABLE_UMFPACK=1
 UMFPACK_LDFLAGS = -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib
 UMFPACK_LIBS = -lumfpack -lamd
@@ -498,10 +498,10 @@ X_CFLAGS =  -I/usr/X11R6/include
 X_EXTRA_LIBS = 
 X_LIBS =  -L/usr/X11R6/lib
 X_PRE_LIBS =  -lSM -lICE
-abs_builddir = /usr/people/kraenkel/NewDune/dune-phasefield/src/problems/1dphase
-abs_srcdir = /usr/people/kraenkel/NewDune/dune-phasefield/src/problems/1dphase
-abs_top_builddir = /usr/people/kraenkel/NewDune/dune-phasefield
-abs_top_srcdir = /usr/people/kraenkel/NewDune/dune-phasefield
+abs_builddir = /disk1/DuneTrunk/dune-phasefield/src/problems/1dphase
+abs_srcdir = /disk1/DuneTrunk/dune-phasefield/src/problems/1dphase
+abs_top_builddir = /disk1/DuneTrunk/dune-phasefield
+abs_top_srcdir = /disk1/DuneTrunk/dune-phasefield
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = 
@@ -514,7 +514,7 @@ am__leading_dot = .
 am__quote = 
 am__tar = tar --format=posix -chf - "$$tardir"
 am__untar = tar -xf -
-am_dir = /usr/people/kraenkel/NewDune/dune-common/am
+am_dir = /disk1/DuneTrunk/dune-common/am
 bindir = ${exec_prefix}/bin
 build = x86_64-unknown-linux-gnu
 build_alias = 
@@ -535,7 +535,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /usr/people/kraenkel/NewDune/dune-phasefield/install-sh
+install_sh = ${SHELL} /disk1/DuneTrunk/dune-phasefield/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -567,7 +567,7 @@ phase_model_spec.hh problemtype.hh
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS) $(LOCAL_LIBS) $(DUNEMPILDFLAGS) $(DUNEMPILIBS) 
 BASEDIR = ../../../dune/fem/main
 SOURCES = $(BASEDIR)/phasefield.cc $(BASEDIR)/phasefield_pol.cc
-POLORDER = 2  
+POLORDER = 1  
 PROBLEM = 1# check ./problemtype.hh
 FLUX = 1 # check ./problemcreator.hh
 phasefield_SOURCES = $(SOURCES) 
